2008-05-19  ARAKI Yasuhiro  <ar@debian.org>

	* app/controllers/application.rb (ApplicationController::don_delete_cache_all): Add to delete feed.xml. (Apply to change routes.rb.)
	* test/integration/cache_test.rb (CacheTest::test_delete_cache): Add new method.

	* app/views/notes/default/*.rhtml: Fix to use flash[:notice]. I'm sorry, I lacked to change them at May.16.

2008-05-17  ARAKI Yasuhiro  <ar@debian.org>

	* app/controllers/notes_controller.rb (NotesController::noteslist): Back to use for wrong URI redirect from ?ct=Time.now to ?notice.

	* config/routes.example.rb: Change to generate file/URL with flash[:notice]
	* test/functional/notes_controller_test.rb (NotesControllerTest::test_parse_nums__1): Apply for these change.


2008-05-16  ARAKI Yasuhiro  <ar@debian.org>

	* app/controllers/notes_controller.rb (NotesController::indexabc): Change to use for wrong URI redirect ?notice to ?ct=Time.now.to_i.
	* test/functional/notes_controller_test.rb (NotesControllerTest::test_parse_nums__1): Change to apply this.
	* app/views/notes/index.rhtml: 
	* app/views/notes/default/show_title.rhtml: 
	* app/views/notes/default/show_enrollment.rhtml: 
	* app/views/notes/default/noteslist.rhtml: 

2008-05-01  ARAKI Yasuhiro  <ar@debian.org>

	* config/routes.example.rb: Change sitemap.xml and feed.xml URLs. (close issue #69)
	* test/integration/cache_test.rb (CacheTest::test_caching_notes): Test for these.


2008-04-28  ARAKI Yasuhiro  <ar@debian.org>

	* Added article controller.

2008-04-25  ARAKI Yasuhiro  <ar@debian.org>

	* app/apis/meta_weblog_service.rb (MetaWeblogService::article_dto_from): Fix to modify by BlogEditor for non-HTML article.
	(MetaWeblogService::editPost): likewise.

	* app/apis/blogger_service.rb (BloggerService::newPost): Change to use UTC.

	* app/models/article.rb (Article::renew_mtime): Chage to use UTC time. Please set environment.rb "config.active_record.default_timezone = :utc".

	* app/models/article_sweeper.rb 